# telegram-bot-template

./: .env  .env.example  .gitignore  README.md  pyproject.toml
telegram_bot_template/databases/: telegram_bot_template.db  telegram_bot_template_database.db
telegram_bot_template/src/: bot_start.py  callback_handlers.py  command_handlers.py  db.py  db_functions.py  functions.py  keyboards.py  logger.py  messages.py  settings.py  steps.py  text_handlers.py
telegram_bot_template/src/admin_panel/: admIn_db_functions.py  admin_callback_handlers.py  admin_command_handler.py
telegram_bot_template/src/handlers/: callback_handlers.py  command_handlers.py  text_handlers.py
telegram_bot_template/tools/: db_cleaner.py
