[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["veledara <painriddlegaming@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.10.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
